Fix unused but set variable warnings https://bugs.webkit.org/show_bug.cgi?id=245845

Reviewed by Yusuke Suzuki.

Fixed unused but set variable warnings reported by Clang 15.

* Source/JavaScriptCore/runtime/HashMapImplInlines.h:
* Source/JavaScriptCore/runtime/WeakMapImpl.h:
* Source/WTF/wtf/URLParser.cpp:
* Source/WebCore/Modules/indexeddb/IDBDatabase.cpp:
* Source/WebCore/html/HTMLMediaElement.cpp:
* Source/WebCore/inspector/InspectorOverlayLabel.cpp:
* Source/WebCore/platform/graphics/FontCascade.cpp:
* Source/WebCore/xml/XPathGrammar.cpp:
* Source/WebKit/NetworkProcess/Classifier/ResourceLoadStatisticsStore.cpp:
* Source/WebKit/NetworkProcess/NetworkProcess.cpp:
* Source/WebKit/WebProcess/WebProcess.cpp:

Canonical link: https://commits.webkit.org/255017@main