Source/JavaScriptCore/runtime/WeakMapImpl.h
@@ -383,7 +383,7 @@ private:
                     continue;
                 ++size;
             }
-            ASSERT(size == m_keyCount);
+            ASSERT_UNUSED(size, size == m_keyCount);
         }
     }
 
